fix(#S11P12D109-308): empathy cehck fixed with delete